Fixed background problem. Added eyes. Fixed overlapping.

--- a/style/main.css
+++ b/style/main.css
@@ -5,13 +5,20 @@
 }
 
 body {
+    width: 100%;
+    height: 100%;
+    max-width: 1920px;
+    max-height: 2096px;
+    margin: 0;
     background-color: #0A192F;
-    background: url("../images/background.png") center no-repeat;
-    background-size: auto;
+    background: url("../images/background.png") center center no-repeat fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     font-family: Consolas, monaco, monospace;
     font-size: 16px;
     color: #fff;
-    margin: 0;
     vertical-align: middle;
 }
 
@@ -33,18 +40,62 @@ body {
 /*==== Greeting div ====*/
 .greeting {
     font-size: 16px;
-    color: #21B2E2; 
-    line-height: 0.01;
+    color: #21B2E2;
+}
+
+.greeting h4 {
+    line-height: 1;
+    margin-top: 0;
 }
 
 #name {
     font-size: 72px;
     color: #fff;
-    
+    line-height: 55px;
+    margin-top: 0;
 }
 
 #blue-os {
     color: #21B2E2;
+}
+
+/*==== Eyes ====*/
+.eyes {
+    display: inline-block;
+}
+
+.eye {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    /* max-width: 45px;
+    max-width: 45px; */
+    background: #fff;
+    border-radius: 50%;
+    position: relative;
+}
+
+.eye:first-child {
+    float:left;
+    margin-right: 5px;
+}
+
+.eye:last-child {
+    float: right;
+    margin-left: 5px;
+}
+
+.ball {
+    box-sizing: content-box;
+    width: 10px;
+    height: 10px;
+    background:#a1caf1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    border: 3px solid #5ea4e7;
 }
 
 /*==== Message div ====*/
